soul cage cost instead of iron ingots, displayed in moddetailpanel. configurable server side